fix: gray hyperlink icon for dark mode support

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,16 +23,16 @@ a.external {
 
 .anchor-link {
 	content: url(/hive-wiki/hyperlink.svg);
+	filter: brightness(0) saturate(100%) invert(50%) sepia(7%) saturate(0%) hue-rotate(206deg) brightness(101%) contrast(88%);
 	display: inline-flex;
 	margin-left: 0.25em;
 	
+	font-size: 1.5rem;
 	width: 1em;
 	height: 1em;
 	align-items: center;
 	justify-content: center;
 	
-	font-size: 1.5rem;
-
 	opacity: 0;
 	transition: all 0.2s ease-in-out;
 }
